# Local-PC

./: .env.example  .gitignore  ACIL_PANEL_KAPAT.cmd  ACIL_SES_KES_VE_GUNCELLE.cmd  AGENTS.md  API_KEY_KAYDET.cmd  DOGRU_TERMINAL_AC.cmd  DOGRU_TERMINAL_AC.vbs  EMEL_BASLAT.cmd  KOPRU_BASLAT.cmd  KOPRU_KURULUM.cmd  KOPRU_OTOMATIK_KAYIT.cmd  KOPRU_TUNEL_BASLAT.cmd  KURULU_SURUMU_GUNCELLE.cmd  ONAYLI_TUM_ISLEMLER.cmd  OP_INVENTORY.md  README.md  SESLI_OZET_OKU.cmd  SES_SUNUCUSU_BASLAT.cmd  TAURI_DEV.cmd  TEK_TIK_GUNCELLE.cmd  YAPILAN_ISLEMLER_RAPORU.md  YARABAY_OKU_SIMDI.cmd  YEREL_HAZIR_BASLAT.cmd  YEREL_ISLEM.cmd  YOLLARI_KONTROL.cmd  check_ports.ps1  check_processes.ps1  gorev_defteri.md  kayit_defteri.md  package-lock.json  package.json  start_panel_on_login.cmd  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai_providers/: ai_provider_invoke.rs  ai_provider_manager.rs  custom_provider.rs  gemini_provider.rs  mod.rs  openai_compatible_provider.rs  provider_base.rs
src-tauri/src/core/: action_executor.rs  ai_workflow_manager.rs  alarm_registry.rs  alternative_analyzer.rs  approval_manager.rs  asker_module_registry.rs  asker_motoru_bridge.rs  asker_motoru_live_bridge.rs  asker_motoru_modules.rs  audit_logger.rs  authority_router.rs  checkpoint_manager.rs  command_orchestrator.rs  decision_tree_builder.rs  dependency_analyzer.rs  env_loader.rs  execution_engine.rs  integrity_checker.rs  live_event_bus.rs  mod.rs  operation_monitor.rs  planning_gate.rs  (+10 more)
src-tauri/tests/: e2e_workflow_test.rs  env_loader_e2e.rs
(+200 files in other folders)
