[package]
name = "lokal_bilgisayar_kontrol_paneli"
version = "0.1.0"
description = "Lokal Bilgisayar Kontrol Paneli"
authors = ["Engin"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4"] }
sha2 = "0.10"
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }

[features]
# default to custom protocol for security
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
